7648 - Fixed map popup contrast issues

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -76,3 +76,15 @@
 .workbench-card-sidebar-tab {
     color: #4f4f4f;
 }
+
+.hover-feature-metadata {
+    color: #595959;
+}
+
+.hover-feature-metadata span {
+    color: #315B7D;
+}
+
+.hover-feature-footer a {
+    color: #2F5879;
+}
